--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://guides.ffxivresources.com/"
+baseURL = "http://guides.xivresources.com/"
 languageCode = "en-us"
 title = "Balance Guides"
 theme = "hermit"
