Add default params to config.toml

--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,9 @@ baseURL = "https://guides.xivresources.com/"
 languageCode = "en-us"
 title = "Balance Guides"
 theme = "hermit"
+
+[params]
+  dateform        = "Jan 2, 2006"
+  dateformShort   = "Jan 2"
+  dateformNum     = "2006-01-02"
+  dateformNumTime = "2006-01-02 15:04"
