added glam to theme submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hermit"]
 	path = themes/hermit
 	url = https://github.com/Track3/hermit.git
+[submodule "themes/glam"]
+	path = themes/glam
+	url = https://github.com/The-Balance-FFXIV/glam
