Author collection with custom image upload location

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,6 +15,26 @@ show_preview_links: true
 ##
 collections:
   ##
+  # User profiles
+  ## 
+  - label: "Author profile"
+    name: "author-profile"
+    folder: "data/author/"
+    format: "json"
+    identifier_field: "username"
+    media_folder: '/static/img/profile'
+    public_folder: '/img/profile'
+    create: true
+    fields:
+      - {label: "Username", name: "username", widget: "string"}
+      - {label: "Profile Image", name: "image", widget: "image", choose_url: false}
+      - {label: "Display Name", name: "name", widget: "string"}
+      - label: "Social information"
+        name: "socials"
+        widget: "object"
+        fields:
+          - {label: "Discord Name", name: "discord_id", widget: "string"}
+  ##
   # Regular guides
   ##
   - name: 'guides'
